Changed the directory structure

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   height: 100vh;
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
-  background-image: url("fusion-background.jpg");
+  background-image: url("Images/fusion-background.jpg");
   background-size: cover;
 }
 
